syntax = "proto3";

package pessoa;

option java_package = "br.com.jh.stubs";
option java_multiple_files = true;

service ConsultaPessoa {
	rpc getPessoa (PessoaRequest) returns (PessoaResponse);
}

message PessoaRequest {
	string cpf = 1;
}

message PessoaResponse {
	int32 id = 1;
	string nome = 2;
	string nascimento = 3;
	string fone = 4;
	string endereco = 5;
	string cpf = 6;
}